# python-proptest

./: .bandit  .bandit.yaml  .flake8  .gitignore  .mkdocs-override.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PYPI_PUBLISHING_PLAN.md  README.md  SECURITY.md  TODO.md  bandit-report.json  demo_aggregate_accumulate.py  demo_chain_public_api.py  index.html  mkdocs.yml  pyproject.toml  pytest.ini  run_tests.py  show_dict_shrink_tree.py  sitemap.xml  test_chain_simple.py  test_run_for_all_dual.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
DEPLOYMENT/: index.html
combinators/: index.html
decorators/: index.html
docs/: DEPLOYMENT.md  combinators.md  decorators.md  generators.md  index.md  properties.md  pytest-best-practices.md  pytest-integration.md  shrinking-requirements.md  shrinking.md  stateful-testing.md  unittest-integration.md
examples/: standalone_decorators_example.py  unittest_pytest_comparison.py
generators/: index.html
properties/: index.html
proptest/core/: generator.py
pyproptest/: __init__.py
pyproptest/core/: __init__.py  decorators.py  either.py  generator.py  option.py  property.py  shrinker.py  stateful.py  stream.py  try_.py
pytest-best-practices/: index.html
pytest-integration/: index.html
python_proptest/: __init__.py
python_proptest/core/: decorators.py  generator.py  property.py  shrinker.py  (+1 more)
scripts/: README.md  build-package.sh  bump-version.sh  clean-whitespace.sh  pre-commit-checks.py  pre-commit-checks.sh  quick-check.sh  setup-docs.sh  test-all-python-versions.sh  test-package.sh  test-python38.sh  upload-pypi.sh  upload-testpypi.sh
search/: search_index.json
shrinking/: index.html
shrinking-requirements/: index.html
stateful-testing/: index.html
tests/: __init__.py  test_advanced_shrinking.py  test_aggregate_accumulate.py  test_all_ported.py  test_basic_generators.py  test_chain_combinator.py  test_combinator.py  test_decorator_api.py  test_decorator_combinations.py  test_decorator_examples.py  test_demo_aggregate_accumulate.py  test_demo_chain.py  test_documentation_examples.py  test_example_decorator.py  test_example_simple.py  test_example_working.py  test_final_demo.py  test_gen_bool_true_prob.py  test_generator_comprehensive.py  test_generator_interface.py  test_lib.py  test_matrix_decorator.py  test_naming_comparison.py  test_new_generators.py  test_primitive.py  test_property_basic.py  test_random.py  test_shrinker.py  test_shrinker_comprehensive.py  test_stateful.py  test_stateful_examples.py  test_stream.py  test_unittest_integration.py  test_weighted_statistics.py
tests_integration/: __init__.py
unittest-integration/: index.html
(+159 files in other folders)
